管理画面ヘッダのID,class名プリフィックス対応

--- a/lib/Baser/webroot/css/admin/layout.css
+++ b/lib/Baser/webroot/css/admin/layout.css
@@ -38,27 +38,31 @@ body > #Page {
 /* Header
 ----------------------------------------------- */
 
-#Header {
+.bc-header {
 	background-color: #FFF;
 }
 
 /* Logo
 ----------------------------------------------- */
 
-#Logo{
+.bc-logo{
 	padding: 20px 40px;
+}
+.bc-logo img {
+	width: 153px;
+	height: 30px;
 }
 
 /* GlobalMenu
 ----------------------------------------------- */
 
-#GlobalMenu{
+.bc-global-menu{
 	float: right;
 }
-#GlobalMenu ul{
+.bc-global-menu ul{
 	padding: 22px 35px 18px;
 }
-#GlobalMenu ul li{
+.bc-global-menu ul li{
 	padding: 0 5px;
 	list-style:none;
 	float:left;
@@ -66,7 +70,7 @@ body > #Page {
 	background-repeat: repeat-y;
 	background-color: #FFF;
 }
-#GlobalMenu ul li.firstChild{
+.bc-global-menu ul li.firstChild{
 	background-image: none;
 }
 
