--- a/lib/Baser/webroot/admin_origin/css/toolbar.scss
+++ b/lib/Baser/webroot/admin_origin/css/toolbar.scss
@@ -15,15 +15,16 @@
 ----------------------------------------------- */
 
 html {
-	margin-top:31px;
+	margin-top: 31px;
 }
-html, body {
+html,
+body {
 	min-height: 340px;
 }
-/* ToolBar
+/* Tool Bar
 ----------------------------------------------- */
 
-#ToolBar{
+.bc-tool-bar {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -35,6 +36,23 @@ html, body {
 	font-size: 12px;
 	border-bottom: 1px solid #444;
 	font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", Meiryo, "メイリオ", "MS PGothic", "ＭＳ Ｐゴシック", Sans-Serif !important;
+	.bc-tool-bar-inner {
+		padding: 0 30px;
+		min-width: 960px;
+		.bc-tool-menu {
+			ul {
+				margin: 0;
+				padding: 0;
+				list-style: none;
+				li {
+					margin: 0;
+					padding: 0;
+					float: left;
+					vertical-align: top;
+				}
+			}
+		}
+	}
 	a,
 	span{
 		line-height: 30px;
@@ -52,19 +70,18 @@ html, body {
 	}
 	span {
 		color: #666;
+		&.bc-debug-mode {
+			background-color: #E20;
+			font-weight: bold;
+			color: #FFF;
+			display: inline !important;
+			padding: 3px 5px;
+			-webkit-border-radius: 5px;
+			-moz-border-radius: 5px;
+			border-radius: 5px;
+		}
 	}
 }
-#ToolbarInner {
-	padding: 0 30px;
-	min-width: 960px;
-}
-#ToolMenu {
-
-}
-#ToolMenu ul,
-#ToolMenu li,
-#UserMenu ul,
-#UserMenu li,
 #SystemMenu ul,
 #SystemMenu li{
 	margin: 0;
@@ -72,121 +89,124 @@ html, body {
 	list-style: none;
 }
 
-#ToolMenu li{
-	float: left;
-	vertical-align: top;
-}
 
-#DebugMode{
-	background-color: #E20;
-	font-weight: bold;
-	color: #FFF;
-	display: inline !important;
-	padding: 3px 5px;
-}
 
-/* UserMenu
+/*.bc-user-menu
 ----------------------------------------------- */
 
-#UserMenu li img {
-	vertical-align: baseline;
-}
-#UserMenu {
+.bc-user-menu {
 	margin-right: 10px;
 	float: right;
 	vertical-align: top;
 	height: 30px;
 	text-align: left;
+	li img {
+		vertical-align: baseline;
+	}
+	ul ul{
+		padding: 0 20px 0 0;
+		position: absolute;
+	}
+	ul li {
+		float: left;
+		position: relative;
+	}
+	ul,
+	li {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+	a {
+		outline: none;
+	}
+	ul li ul,
+	ul div#SystemMenu {
+		position: absolute;
+		border: 1px solid #CCC !important;
+		box-shadow: 0 1px 3px #CCC;
+		margin-top: -1px;
+	    display:none;
+		background-color: #FFF;
+	}
+	ul li ul {
+		width: 120px;
+	}
+	ul div#SystemMenu{
+		width: 600px;
+	}
+	ul li ul li {
+		padding: 0;
+		float: none;
+		margin: 0;
+		width: 100%;
+	}
+	li {
+		&.active {
+			a {
+				border: 1px solid #CCC;
+			    background-color: #FFF;
+				border-bottom: 0;
+			    box-shadow: 0 -1px 3px #CCC;
+				display: block;
+				height: 27px;
+				position: relative;
+			    z-index: 1;
+				color: #CCC;
+			}
+			ul a {
+			    box-shadow: 0 0 0 #CCC;
+				color: #000;
+				border: 0;
+				width: 100%;
+				padding: 2px 10px 2px 10px;
+				&:hover{
+					background-color: #EDF8C9;
+				}
+			}
+			div div{
+				border-left: 1px solid #EDEDED;
+				border-right: 1px solid #DDD;
+				border-bottom: 1px solid #DDD;
+				margin: 10px;
+			}
+			ul {
+			    display: block;
+				right: 0;	
+			}
+			div#SystemMenu {
+			    display: block;
+				right: 0;
+			}
+			div#SystemMenu {
+			    background-color: #FFF;
+				border-bottom: 0;
+				color: #000;
+				border: 0;
+				padding-bottom: 5px;
+				padding-top: 5px;
+			}
+			div#SystemMenu div ul{
+				position: relative;
+				width:auto;
+				padding: 0;
+				box-shadow: none;
+				border: none !important;
+				margin-bottom: 10px;
+				padding-left: 20px;
+				padding-right: 20px;
+				padding-top: 5px;
+				padding-bottom: 5px;
+				margin: 0;
+				display: none;
+				overflow: auto;
+				max-height: 400px;
+			}
+			
+		}
+	}
 }
-#UserMenu ul ul{
-	padding: 0 20px 0 0;
-	position: absolute;
-}
-#UserMenu ul li{
-	float: left;
-	position: relative;
-}
-#UserMenu a {
-	outline: none;
-}
-#UserMenu ul li ul,
-#UserMenu ul div#SystemMenu{
-	position: absolute;
-	border: 1px solid #CCC !important;
-	box-shadow: 0 1px 3px #CCC;
-	margin-top: -1px;
-    display:none;
-	background-color: #FFF;
-}
-#UserMenu ul li ul {
-	width: 120px;
-}
-#UserMenu ul div#SystemMenu{
-	width: 600px;
-}
-#UserMenu ul li ul li {
-	padding: 0;
-	float: none;
-	margin: 0;
-	width: 100%;
-}
-#UserMenu .active a {
-	border: 1px solid #CCC;
-    background-color: #FFF;
-	border-bottom: 0;
-    box-shadow: 0 -1px 3px #CCC;
-	display: block;
-	height: 27px;
-	position: relative;
-    z-index: 1;
-	color: #CCC;
-}
-#UserMenu .active ul,
-#UserMenu .active div#SystemMenu {
-    display:block;
-	right:0;
-}
-#UserMenu .active ul a {
-    box-shadow: 0 0 0 #CCC;
-	color: #000;
-	border: 0;
-	width: 100%;
-	padding: 2px 10px 2px 10px;
-}
-#UserMenu .active ul a:hover{
-	background-color: #EDF8C9;
-}
-#UserMenu .active div#SystemMenu {
-    background-color: #FFF;
-	border-bottom: 0;
-	color: #000;
-	border: 0;
-	padding-bottom: 5px;
-	padding-top: 5px;
-}
-#UserMenu .active div div{
-	border-left: 1px solid #EDEDED;
-	border-right: 1px solid #DDD;
-	border-bottom: 1px solid #DDD;
-	margin: 10px;
-}
-#UserMenu .active div#SystemMenu div ul{
-	position: relative;
-	width:auto;
-	padding: 0;
-	box-shadow: none;
-	border: none !important;
-	margin-bottom: 10px;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin: 0;
-	display: none;
-	overflow: auto;
-	max-height: 400px;
-}
-#UserMenu .active div#SystemMenu div h2{
+.bc-user-menu .active div#SystemMenu div h2{
 	font-weight: bold;
 	font-size: 14px;
 	color: #000;
@@ -203,37 +223,32 @@ html, body {
 	cursor: pointer;
 	margin: 0 !important;
 }
-#UserMenu .active div#SystemMenu div h2:hover{
+.bc-user-menu .active div#SystemMenu div h2:hover{
 	background: #f4f4f4;
 	background: -moz-linear-gradient(top,#f4f4f4,#dfdfdf 100%);
 	background: -webkit-gradient(linear,left top,left bottom,from(#f4f4f4),color-stop(100%,#dfdfdf));
 	background: -o-linear-gradient(top,#f4f4f4,#dfdfdf 100%);
 }
-#UserMenu .active div#SystemMenu div h2:active{
+.bc-user-menu .active div#SystemMenu div h2:active{
 	background: #cdcdcd;
 	background: -moz-linear-gradient(top,#cdcdcd,#eee 100%);
 	background: -webkit-gradient(linear,left top,left bottom,from(#cdcdcd),color-stop(100%,#eee));
 	background: -o-linear-gradient(top,#cdcdcd,#eee 100%);
 }
 
-#UserMenu .active div#SystemMenu div ul li{
+.bc-user-menu .active div#SystemMenu div ul li{
 	width: auto;
 	border: none;
 	float: left;
 	background: url(../../img/admin/blt_list_2.png) no-repeat left center;
 	padding: 0 20px 0 10px;
 }
-#UserMenu .active div#SystemMenu div ul li a{
+.bc-user-menu .active div#SystemMenu div ul li a{
 	display: inline;
 	padding: 0 !important;
 	white-space: nowrap;
 }
-#UserMenu .active div#SystemMenu div ul li a:hover{
+.bc-user-menu .active div#SystemMenu div ul li a:hover{
 	background-color: #FFF;
 	color: #AAA;
-}
-#DebugMode {	
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
 }
