--- a/lib/Baser/webroot/css/admin/toolbar.css
+++ b/lib/Baser/webroot/css/admin/toolbar.css
@@ -15,12 +15,13 @@
 html {
   margin-top: 31px; }
 
-html, body {
+html,
+body {
   min-height: 340px; }
 
-/* ToolBar
+/* Tool Bar
 ----------------------------------------------- */
-#ToolBar {
+.bc-tool-bar {
   position: fixed;
   top: 0;
   left: 0;
@@ -32,8 +33,20 @@ html, body {
   font-size: 12px;
   border-bottom: 1px solid #444;
   font-family: "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", Meiryo, "メイリオ", "MS PGothic", "ＭＳ Ｐゴシック", Sans-Serif !important; }
-  #ToolBar a,
-  #ToolBar span {
+  .bc-tool-bar .bc-tool-bar-inner {
+    padding: 0 30px;
+    min-width: 960px; }
+    .bc-tool-bar .bc-tool-bar-inner .bc-tool-menu ul {
+      margin: 0;
+      padding: 0;
+      list-style: none; }
+      .bc-tool-bar .bc-tool-bar-inner .bc-tool-menu ul li {
+        margin: 0;
+        padding: 0;
+        float: left;
+        vertical-align: top; }
+  .bc-tool-bar a,
+  .bc-tool-bar span {
     line-height: 30px;
     height: 30px;
     padding: 0 10px;
@@ -42,138 +55,120 @@ html, body {
     display: block;
     position: relative;
     vertical: top; }
-  #ToolBar a:hover {
+  .bc-tool-bar a:hover {
     background-color: #444;
     color: #FFF; }
-  #ToolBar span {
+  .bc-tool-bar span {
     color: #666; }
+    .bc-tool-bar span.bc-debug-mode {
+      background-color: #E20;
+      font-weight: bold;
+      color: #FFF;
+      display: inline !important;
+      padding: 3px 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px; }
 
-#ToolbarInner {
-  padding: 0 30px;
-  min-width: 960px; }
-
-#ToolMenu ul,
-#ToolMenu li,
-#UserMenu ul,
-#UserMenu li,
 #SystemMenu ul,
 #SystemMenu li {
   margin: 0;
   padding: 0;
   list-style: none; }
 
-#ToolMenu li {
-  float: left;
-  vertical-align: top; }
-
-#DebugMode {
-  background-color: #E20;
-  font-weight: bold;
-  color: #FFF;
-  display: inline !important;
-  padding: 3px 5px; }
-
-/* UserMenu
+/*.bc-user-menu
 ----------------------------------------------- */
-#UserMenu li img {
-  vertical-align: baseline; }
-
-#UserMenu {
+.bc-user-menu {
   margin-right: 10px;
   float: right;
   vertical-align: top;
   height: 30px;
   text-align: left; }
+  .bc-user-menu li img {
+    vertical-align: baseline; }
+  .bc-user-menu ul ul {
+    padding: 0 20px 0 0;
+    position: absolute; }
+  .bc-user-menu ul li {
+    float: left;
+    position: relative; }
+  .bc-user-menu ul,
+  .bc-user-menu li {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+  .bc-user-menu a {
+    outline: none; }
+  .bc-user-menu ul li ul,
+  .bc-user-menu ul div#SystemMenu {
+    position: absolute;
+    border: 1px solid #CCC !important;
+    box-shadow: 0 1px 3px #CCC;
+    margin-top: -1px;
+    display: none;
+    background-color: #FFF; }
+  .bc-user-menu ul li ul {
+    width: 120px; }
+  .bc-user-menu ul div#SystemMenu {
+    width: 600px; }
+  .bc-user-menu ul li ul li {
+    padding: 0;
+    float: none;
+    margin: 0;
+    width: 100%; }
+  .bc-user-menu li.active a {
+    border: 1px solid #CCC;
+    background-color: #FFF;
+    border-bottom: 0;
+    box-shadow: 0 -1px 3px #CCC;
+    display: block;
+    height: 27px;
+    position: relative;
+    z-index: 1;
+    color: #CCC; }
+  .bc-user-menu li.active ul a {
+    box-shadow: 0 0 0 #CCC;
+    color: #000;
+    border: 0;
+    width: 100%;
+    padding: 2px 10px 2px 10px; }
+    .bc-user-menu li.active ul a:hover {
+      background-color: #EDF8C9; }
+  .bc-user-menu li.active div div {
+    border-left: 1px solid #EDEDED;
+    border-right: 1px solid #DDD;
+    border-bottom: 1px solid #DDD;
+    margin: 10px; }
+  .bc-user-menu li.active ul {
+    display: block;
+    right: 0; }
+  .bc-user-menu li.active div#SystemMenu {
+    display: block;
+    right: 0; }
+  .bc-user-menu li.active div#SystemMenu {
+    background-color: #FFF;
+    border-bottom: 0;
+    color: #000;
+    border: 0;
+    padding-bottom: 5px;
+    padding-top: 5px; }
+  .bc-user-menu li.active div#SystemMenu div ul {
+    position: relative;
+    width: auto;
+    padding: 0;
+    box-shadow: none;
+    border: none !important;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin: 0;
+    display: none;
+    overflow: auto;
+    max-height: 400px; }
 
-#UserMenu ul ul {
-  padding: 0 20px 0 0;
-  position: absolute; }
-
-#UserMenu ul li {
-  float: left;
-  position: relative; }
-
-#UserMenu a {
-  outline: none; }
-
-#UserMenu ul li ul,
-#UserMenu ul div#SystemMenu {
-  position: absolute;
-  border: 1px solid #CCC !important;
-  box-shadow: 0 1px 3px #CCC;
-  margin-top: -1px;
-  display: none;
-  background-color: #FFF; }
-
-#UserMenu ul li ul {
-  width: 120px; }
-
-#UserMenu ul div#SystemMenu {
-  width: 600px; }
-
-#UserMenu ul li ul li {
-  padding: 0;
-  float: none;
-  margin: 0;
-  width: 100%; }
-
-#UserMenu .active a {
-  border: 1px solid #CCC;
-  background-color: #FFF;
-  border-bottom: 0;
-  box-shadow: 0 -1px 3px #CCC;
-  display: block;
-  height: 27px;
-  position: relative;
-  z-index: 1;
-  color: #CCC; }
-
-#UserMenu .active ul,
-#UserMenu .active div#SystemMenu {
-  display: block;
-  right: 0; }
-
-#UserMenu .active ul a {
-  box-shadow: 0 0 0 #CCC;
-  color: #000;
-  border: 0;
-  width: 100%;
-  padding: 2px 10px 2px 10px; }
-
-#UserMenu .active ul a:hover {
-  background-color: #EDF8C9; }
-
-#UserMenu .active div#SystemMenu {
-  background-color: #FFF;
-  border-bottom: 0;
-  color: #000;
-  border: 0;
-  padding-bottom: 5px;
-  padding-top: 5px; }
-
-#UserMenu .active div div {
-  border-left: 1px solid #EDEDED;
-  border-right: 1px solid #DDD;
-  border-bottom: 1px solid #DDD;
-  margin: 10px; }
-
-#UserMenu .active div#SystemMenu div ul {
-  position: relative;
-  width: auto;
-  padding: 0;
-  box-shadow: none;
-  border: none !important;
-  margin-bottom: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin: 0;
-  display: none;
-  overflow: auto;
-  max-height: 400px; }
-
-#UserMenu .active div#SystemMenu div h2 {
+.bc-user-menu .active div#SystemMenu div h2 {
   font-weight: bold;
   font-size: 14px;
   color: #000;
@@ -190,37 +185,32 @@ html, body {
   cursor: pointer;
   margin: 0 !important; }
 
-#UserMenu .active div#SystemMenu div h2:hover {
+.bc-user-menu .active div#SystemMenu div h2:hover {
   background: #f4f4f4;
   background: -moz-linear-gradient(top, #f4f4f4, #dfdfdf 100%);
   background: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), color-stop(100%, #dfdfdf));
   background: -o-linear-gradient(top, #f4f4f4, #dfdfdf 100%); }
 
-#UserMenu .active div#SystemMenu div h2:active {
+.bc-user-menu .active div#SystemMenu div h2:active {
   background: #cdcdcd;
   background: -moz-linear-gradient(top, #cdcdcd, #eee 100%);
   background: -webkit-gradient(linear, left top, left bottom, from(#cdcdcd), color-stop(100%, #eee));
   background: -o-linear-gradient(top, #cdcdcd, #eee 100%); }
 
-#UserMenu .active div#SystemMenu div ul li {
+.bc-user-menu .active div#SystemMenu div ul li {
   width: auto;
   border: none;
   float: left;
   background: url(../../img/admin/blt_list_2.png) no-repeat left center;
   padding: 0 20px 0 10px; }
 
-#UserMenu .active div#SystemMenu div ul li a {
+.bc-user-menu .active div#SystemMenu div ul li a {
   display: inline;
   padding: 0 !important;
   white-space: nowrap; }
 
-#UserMenu .active div#SystemMenu div ul li a:hover {
+.bc-user-menu .active div#SystemMenu div ul li a:hover {
   background-color: #FFF;
   color: #AAA; }
-
-#DebugMode {
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px; }
 
 /*# sourceMappingURL=toolbar.css.map */
