--- a/lib/Baser/webroot/admin_origin/css/toolbar.scss
+++ b/lib/Baser/webroot/admin_origin/css/toolbar.scss
@@ -82,173 +82,178 @@ body {
 		}
 	}
 }
-#SystemMenu ul,
-#SystemMenu li{
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
 
 
 /*.bc-user-menu
 ----------------------------------------------- */
-
 .bc-user-menu {
 	margin-right: 10px;
 	float: right;
 	vertical-align: top;
 	height: 30px;
 	text-align: left;
-	li img {
+
+	// 共通
+	img {
 		vertical-align: baseline;
-	}
-	ul ul{
-		padding: 0 20px 0 0;
-		position: absolute;
-	}
-	ul li {
-		float: left;
-		position: relative;
-	}
-	ul,
-	li {
-		margin: 0;
-		padding: 0;
-		list-style: none;
 	}
 	a {
 		outline: none;
 	}
-	ul li ul,
-	ul div#SystemMenu {
-		position: absolute;
-		border: 1px solid #CCC !important;
-		box-shadow: 0 1px 3px #CCC;
-		margin-top: -1px;
-	    display:none;
-		background-color: #FFF;
-	}
-	ul li ul {
-		width: 120px;
-	}
-	ul div#SystemMenu{
-		width: 600px;
-	}
-	ul li ul li {
-		padding: 0;
-		float: none;
+
+	// 階層
+	ul {
 		margin: 0;
-		width: 100%;
-	}
-	li {
-		&.active {
-			a {
-				border: 1px solid #CCC;
-			    background-color: #FFF;
-				border-bottom: 0;
-			    box-shadow: 0 -1px 3px #CCC;
-				display: block;
-				height: 27px;
-				position: relative;
-			    z-index: 1;
-				color: #CCC;
+		padding: 0;
+		list-style: none;
+		li.bc-user-menu-item {
+			margin: 0;
+			padding: 0;
+			float: left;
+			position: relative;
+
+			/* インタラクション
+			------------------------------------------- */
+			// 通常
+			.bc-user-menu-sub {
+				display: none;
 			}
-			ul a {
-			    box-shadow: 0 0 0 #CCC;
-				color: #000;
-				border: 0;
-				width: 100%;
-				padding: 2px 10px 2px 10px;
-				&:hover{
-					background-color: #EDF8C9;
+			// アクティブ状態
+			&.bc-active .bc-user-menu-sub {
+				display: block;
+			}
+
+			&.bc-active { // インタラクティブに付加
+				a {
+					border: 1px solid #CCC;
+				    background-color: #FFF;
+					border-bottom: 0;
+				    box-shadow: 0 -1px 3px #CCC;
+					display: block;
+					height: 27px;
+					position: relative;
+				    z-index: 1;
+					color: #CCC;
+				}
+				ul li a {
+				    box-shadow: 0 0 0 #CCC;
+					color: #000;
+					border: 0;
+					width: 100%;
+					padding: 2px 10px 2px 10px;
+				}
+				ul {
+				    display: block;
+					right: 0;	
 				}
 			}
-			div div{
-				border-left: 1px solid #EDEDED;
-				border-right: 1px solid #DDD;
-				border-bottom: 1px solid #DDD;
-				margin: 10px;
+
+			// ユーザーメニュー
+			.bc-account-menu {
+				padding: 0 20px 0 0;
+				position: absolute;
+				border: 1px solid #CCC !important;
+				box-shadow: 0 1px 3px #CCC;
+				margin-top: -1px;
+				background-color: #FFF;
+				width: 120px;
+				li {
+					padding: 0;
+					float: none;
+					margin: 0;
+					width: 100%;
+					a {
+						&:hover {
+							background-color: #EDF8C9;
+						}
+					}
+				}
 			}
-			ul {
-			    display: block;
-				right: 0;	
-			}
-			div#SystemMenu {
-			    display: block;
+
+			// システムメニュー
+			// #SystemMenu {
+			.bc-system-menu {
 				right: 0;
-			}
-			div#SystemMenu {
 			    background-color: #FFF;
 				border-bottom: 0;
 				color: #000;
 				border: 0;
 				padding-bottom: 5px;
 				padding-top: 5px;
+				position: absolute;
+				border: 1px solid #CCC !important;
+				box-shadow: 0 1px 3px #CCC;
+				margin-top: -1px;
+				background-color: #FFF;
+				width: 600px;
+				div {
+					border-left: 1px solid #EDEDED;
+					border-right: 1px solid #DDD;
+					border-bottom: 1px solid #DDD;
+					margin: 10px;
+					h2 {
+						font-weight: bold;
+						font-size: 14px;
+						color: #000;
+						border-top: 1px solid #DDD;
+						border-bottom: 1px solid #EDEDED;
+						padding-left: 20px;
+						padding-right: 20px;
+						padding-top: 5px;
+						padding-bottom: 5px;
+						background: #F3F3F3;
+						background: -moz-linear-gradient(top,#FFF,#F3F3F3);
+						background: -webkit-gradient(linear,left top,left bottom,from(#FFF),color-stop(100%,#F3F3F3));
+						background: -o-linear-gradient(top,#FFF,#F3F3F3);
+						cursor: pointer;
+						margin: 0 !important;
+						&:hover {
+							background: #f4f4f4;
+							background: -moz-linear-gradient(top,#f4f4f4,#dfdfdf 100%);
+							background: -webkit-gradient(linear,left top,left bottom,from(#f4f4f4),color-stop(100%,#dfdfdf));
+							background: -o-linear-gradient(top,#f4f4f4,#dfdfdf 100%);
+						}
+						&:active {
+							background: #cdcdcd;
+							background: -moz-linear-gradient(top,#cdcdcd,#eee 100%);
+							background: -webkit-gradient(linear,left top,left bottom,from(#cdcdcd),color-stop(100%,#eee));
+							background: -o-linear-gradient(top,#cdcdcd,#eee 100%);
+						}
+					}
+					ul {
+						position: relative;
+						width:auto;
+						padding: 0;
+						box-shadow: none;
+						border: none !important;
+						margin-bottom: 10px;
+						padding-left: 20px;
+						padding-right: 20px;
+						padding-top: 5px;
+						padding-bottom: 5px;
+						margin: 0;
+						display: none;
+						overflow: auto;
+						max-height: 400px;
+						li {
+							width: auto;
+							border: none;
+							float: left;
+							background: url(../../img/admin/blt_list_2.png) no-repeat left center;
+							padding: 0 20px 0 10px;
+							a {
+								display: inline;
+								padding: 0 !important;
+								white-space: nowrap;
+								&:hover {
+									background-color: #FFF;
+									color: #AAA;
+								}
+							}
+						}
+					}
+				}
 			}
-			div#SystemMenu div ul{
-				position: relative;
-				width:auto;
-				padding: 0;
-				box-shadow: none;
-				border: none !important;
-				margin-bottom: 10px;
-				padding-left: 20px;
-				padding-right: 20px;
-				padding-top: 5px;
-				padding-bottom: 5px;
-				margin: 0;
-				display: none;
-				overflow: auto;
-				max-height: 400px;
-			}
-			
 		}
 	}
-}
-.bc-user-menu .active div#SystemMenu div h2{
-	font-weight: bold;
-	font-size: 14px;
-	color: #000;
-	border-top: 1px solid #DDD;
-	border-bottom: 1px solid #EDEDED;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	background: #F3F3F3;
-	background: -moz-linear-gradient(top,#FFF,#F3F3F3);
-	background: -webkit-gradient(linear,left top,left bottom,from(#FFF),color-stop(100%,#F3F3F3));
-	background: -o-linear-gradient(top,#FFF,#F3F3F3);
-	cursor: pointer;
-	margin: 0 !important;
-}
-.bc-user-menu .active div#SystemMenu div h2:hover{
-	background: #f4f4f4;
-	background: -moz-linear-gradient(top,#f4f4f4,#dfdfdf 100%);
-	background: -webkit-gradient(linear,left top,left bottom,from(#f4f4f4),color-stop(100%,#dfdfdf));
-	background: -o-linear-gradient(top,#f4f4f4,#dfdfdf 100%);
-}
-.bc-user-menu .active div#SystemMenu div h2:active{
-	background: #cdcdcd;
-	background: -moz-linear-gradient(top,#cdcdcd,#eee 100%);
-	background: -webkit-gradient(linear,left top,left bottom,from(#cdcdcd),color-stop(100%,#eee));
-	background: -o-linear-gradient(top,#cdcdcd,#eee 100%);
-}
-
-.bc-user-menu .active div#SystemMenu div ul li{
-	width: auto;
-	border: none;
-	float: left;
-	background: url(../../img/admin/blt_list_2.png) no-repeat left center;
-	padding: 0 20px 0 10px;
-}
-.bc-user-menu .active div#SystemMenu div ul li a{
-	display: inline;
-	padding: 0 !important;
-	white-space: nowrap;
-}
-.bc-user-menu .active div#SystemMenu div ul li a:hover{
-	background-color: #FFF;
-	color: #AAA;
 }
