--- a/lib/Baser/webroot/css/admin/toolbar.css
+++ b/lib/Baser/webroot/css/admin/toolbar.css
@@ -70,12 +70,6 @@ body {
       -moz-border-radius: 5px;
       border-radius: 5px; }
 
-#SystemMenu ul,
-#SystemMenu li {
-  margin: 0;
-  padding: 0;
-  list-style: none; }
-
 /*.bc-user-menu
 ----------------------------------------------- */
 .bc-user-menu {
@@ -84,133 +78,131 @@ body {
   vertical-align: top;
   height: 30px;
   text-align: left; }
-  .bc-user-menu li img {
+  .bc-user-menu img {
     vertical-align: baseline; }
-  .bc-user-menu ul ul {
-    padding: 0 20px 0 0;
-    position: absolute; }
-  .bc-user-menu ul li {
-    float: left;
-    position: relative; }
-  .bc-user-menu ul,
-  .bc-user-menu li {
+  .bc-user-menu a {
+    outline: none; }
+  .bc-user-menu ul {
     margin: 0;
     padding: 0;
     list-style: none; }
-  .bc-user-menu a {
-    outline: none; }
-  .bc-user-menu ul li ul,
-  .bc-user-menu ul div#SystemMenu {
-    position: absolute;
-    border: 1px solid #CCC !important;
-    box-shadow: 0 1px 3px #CCC;
-    margin-top: -1px;
-    display: none;
-    background-color: #FFF; }
-  .bc-user-menu ul li ul {
-    width: 120px; }
-  .bc-user-menu ul div#SystemMenu {
-    width: 600px; }
-  .bc-user-menu ul li ul li {
-    padding: 0;
-    float: none;
-    margin: 0;
-    width: 100%; }
-  .bc-user-menu li.active a {
-    border: 1px solid #CCC;
-    background-color: #FFF;
-    border-bottom: 0;
-    box-shadow: 0 -1px 3px #CCC;
-    display: block;
-    height: 27px;
-    position: relative;
-    z-index: 1;
-    color: #CCC; }
-  .bc-user-menu li.active ul a {
-    box-shadow: 0 0 0 #CCC;
-    color: #000;
-    border: 0;
-    width: 100%;
-    padding: 2px 10px 2px 10px; }
-    .bc-user-menu li.active ul a:hover {
-      background-color: #EDF8C9; }
-  .bc-user-menu li.active div div {
-    border-left: 1px solid #EDEDED;
-    border-right: 1px solid #DDD;
-    border-bottom: 1px solid #DDD;
-    margin: 10px; }
-  .bc-user-menu li.active ul {
-    display: block;
-    right: 0; }
-  .bc-user-menu li.active div#SystemMenu {
-    display: block;
-    right: 0; }
-  .bc-user-menu li.active div#SystemMenu {
-    background-color: #FFF;
-    border-bottom: 0;
-    color: #000;
-    border: 0;
-    padding-bottom: 5px;
-    padding-top: 5px; }
-  .bc-user-menu li.active div#SystemMenu div ul {
-    position: relative;
-    width: auto;
-    padding: 0;
-    box-shadow: none;
-    border: none !important;
-    margin-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin: 0;
-    display: none;
-    overflow: auto;
-    max-height: 400px; }
-
-.bc-user-menu .active div#SystemMenu div h2 {
-  font-weight: bold;
-  font-size: 14px;
-  color: #000;
-  border-top: 1px solid #DDD;
-  border-bottom: 1px solid #EDEDED;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background: #F3F3F3;
-  background: -moz-linear-gradient(top, #FFF, #F3F3F3);
-  background: -webkit-gradient(linear, left top, left bottom, from(#FFF), color-stop(100%, #F3F3F3));
-  background: -o-linear-gradient(top, #FFF, #F3F3F3);
-  cursor: pointer;
-  margin: 0 !important; }
-
-.bc-user-menu .active div#SystemMenu div h2:hover {
-  background: #f4f4f4;
-  background: -moz-linear-gradient(top, #f4f4f4, #dfdfdf 100%);
-  background: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), color-stop(100%, #dfdfdf));
-  background: -o-linear-gradient(top, #f4f4f4, #dfdfdf 100%); }
-
-.bc-user-menu .active div#SystemMenu div h2:active {
-  background: #cdcdcd;
-  background: -moz-linear-gradient(top, #cdcdcd, #eee 100%);
-  background: -webkit-gradient(linear, left top, left bottom, from(#cdcdcd), color-stop(100%, #eee));
-  background: -o-linear-gradient(top, #cdcdcd, #eee 100%); }
-
-.bc-user-menu .active div#SystemMenu div ul li {
-  width: auto;
-  border: none;
-  float: left;
-  background: url(../../img/admin/blt_list_2.png) no-repeat left center;
-  padding: 0 20px 0 10px; }
-
-.bc-user-menu .active div#SystemMenu div ul li a {
-  display: inline;
-  padding: 0 !important;
-  white-space: nowrap; }
-
-.bc-user-menu .active div#SystemMenu div ul li a:hover {
-  background-color: #FFF;
-  color: #AAA; }
+    .bc-user-menu ul li.bc-user-menu-item {
+      margin: 0;
+      padding: 0;
+      float: left;
+      position: relative;
+      /* インタラクション
+      ------------------------------------------- */ }
+      .bc-user-menu ul li.bc-user-menu-item .bc-user-menu-sub {
+        display: none; }
+      .bc-user-menu ul li.bc-user-menu-item.bc-active .bc-user-menu-sub {
+        display: block; }
+      .bc-user-menu ul li.bc-user-menu-item.bc-active a {
+        border: 1px solid #CCC;
+        background-color: #FFF;
+        border-bottom: 0;
+        box-shadow: 0 -1px 3px #CCC;
+        display: block;
+        height: 27px;
+        position: relative;
+        z-index: 1;
+        color: #CCC; }
+      .bc-user-menu ul li.bc-user-menu-item.bc-active ul li a {
+        box-shadow: 0 0 0 #CCC;
+        color: #000;
+        border: 0;
+        width: 100%;
+        padding: 2px 10px 2px 10px; }
+      .bc-user-menu ul li.bc-user-menu-item.bc-active ul {
+        display: block;
+        right: 0; }
+      .bc-user-menu ul li.bc-user-menu-item .bc-account-menu {
+        padding: 0 20px 0 0;
+        position: absolute;
+        border: 1px solid #CCC !important;
+        box-shadow: 0 1px 3px #CCC;
+        margin-top: -1px;
+        background-color: #FFF;
+        width: 120px; }
+        .bc-user-menu ul li.bc-user-menu-item .bc-account-menu li {
+          padding: 0;
+          float: none;
+          margin: 0;
+          width: 100%; }
+          .bc-user-menu ul li.bc-user-menu-item .bc-account-menu li a:hover {
+            background-color: #EDF8C9; }
+      .bc-user-menu ul li.bc-user-menu-item .bc-system-menu {
+        right: 0;
+        background-color: #FFF;
+        border-bottom: 0;
+        color: #000;
+        border: 0;
+        padding-bottom: 5px;
+        padding-top: 5px;
+        position: absolute;
+        border: 1px solid #CCC !important;
+        box-shadow: 0 1px 3px #CCC;
+        margin-top: -1px;
+        background-color: #FFF;
+        width: 600px; }
+        .bc-user-menu ul li.bc-user-menu-item .bc-system-menu div {
+          border-left: 1px solid #EDEDED;
+          border-right: 1px solid #DDD;
+          border-bottom: 1px solid #DDD;
+          margin: 10px; }
+          .bc-user-menu ul li.bc-user-menu-item .bc-system-menu div h2 {
+            font-weight: bold;
+            font-size: 14px;
+            color: #000;
+            border-top: 1px solid #DDD;
+            border-bottom: 1px solid #EDEDED;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            background: #F3F3F3;
+            background: -moz-linear-gradient(top, #FFF, #F3F3F3);
+            background: -webkit-gradient(linear, left top, left bottom, from(#FFF), color-stop(100%, #F3F3F3));
+            background: -o-linear-gradient(top, #FFF, #F3F3F3);
+            cursor: pointer;
+            margin: 0 !important; }
+            .bc-user-menu ul li.bc-user-menu-item .bc-system-menu div h2:hover {
+              background: #f4f4f4;
+              background: -moz-linear-gradient(top, #f4f4f4, #dfdfdf 100%);
+              background: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), color-stop(100%, #dfdfdf));
+              background: -o-linear-gradient(top, #f4f4f4, #dfdfdf 100%); }
+            .bc-user-menu ul li.bc-user-menu-item .bc-system-menu div h2:active {
+              background: #cdcdcd;
+              background: -moz-linear-gradient(top, #cdcdcd, #eee 100%);
+              background: -webkit-gradient(linear, left top, left bottom, from(#cdcdcd), color-stop(100%, #eee));
+              background: -o-linear-gradient(top, #cdcdcd, #eee 100%); }
+          .bc-user-menu ul li.bc-user-menu-item .bc-system-menu div ul {
+            position: relative;
+            width: auto;
+            padding: 0;
+            box-shadow: none;
+            border: none !important;
+            margin-bottom: 10px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            margin: 0;
+            display: none;
+            overflow: auto;
+            max-height: 400px; }
+            .bc-user-menu ul li.bc-user-menu-item .bc-system-menu div ul li {
+              width: auto;
+              border: none;
+              float: left;
+              background: url(../../img/admin/blt_list_2.png) no-repeat left center;
+              padding: 0 20px 0 10px; }
+              .bc-user-menu ul li.bc-user-menu-item .bc-system-menu div ul li a {
+                display: inline;
+                padding: 0 !important;
+                white-space: nowrap; }
+                .bc-user-menu ul li.bc-user-menu-item .bc-system-menu div ul li a:hover {
+                  background-color: #FFF;
+                  color: #AAA; }
 
 /*# sourceMappingURL=toolbar.css.map */
