--- a/lib/Baser/webroot/admin_origin/css/layout.scss
+++ b/lib/Baser/webroot/admin_origin/css/layout.scss
@@ -38,27 +38,31 @@ body > #Page {
 /* Header
 ----------------------------------------------- */
 
-#Header {
+.bc-header {
 	background-color: #FFF;
 }
 
 /* Logo
 ----------------------------------------------- */
 
-#Logo{
+.bc-logo{
 	padding: 20px 40px;
+}
+.bc-logo img {
+	width: 153px;
+	height: 30px;
 }
 
 /* GlobalMenu
 ----------------------------------------------- */
 
-#GlobalMenu{
+.bc-global-menu{
 	float: right;
 }
-#GlobalMenu ul{
+.bc-global-menu ul{
 	padding: 22px 35px 18px;
 }
-#GlobalMenu ul li{
+.bc-global-menu ul li{
 	padding: 0 5px;
 	list-style:none;
 	float:left;
@@ -66,7 +70,7 @@ body > #Page {
 	background-repeat: repeat-y;
 	background-color: #FFF;
 }
-#GlobalMenu ul li.firstChild{
+.bc-global-menu ul li.firstChild{
 	background-image: none;
 }
 
@@ -90,14 +94,14 @@ body > #Page {
 /* ==================================================================== */
 
 
-#SideBar{
+.bc-side-bar{
 	width: 208px;
 	float: left;
 	position: absolute;
 	left:-180px;
 }
 
-#BtnSideBarOpener {
+.bc-btn-side-bar-opener {
 	width:30px;
 	height:30px;
 	position:absolute;
@@ -115,7 +119,7 @@ body > #Page {
 
 /* FavoriteMenu
 ----------------------------------------------- */
-#FavoriteArea {
+.bc-favorite-area {
 	margin-bottom: 14px;
     float: left;
     width: 100%;
@@ -124,17 +128,17 @@ body > #Page {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-#FavoriteMenu {
+.bc-favorite-menu {
     width: 100%;
 }
 
-#FavoriteMenu h2{
+.bc-favorite-menu h2{
 	color: #FFF;
     background: #333333;
 	padding: 6px 10px 0;
 }
 
-#FavoriteMenu h2 img {
+.bc-favorite-menu h2 img {
     margin: 0 0 -9px;
 }
 
@@ -148,7 +152,7 @@ ul.favorite-menu-list a{
 	padding-left: 22px;
 	background: url(../../img/admin/blt_favorite.png) no-repeat 5px 5px;
 }
-#FavoriteMenu a:hover{
+.bc-favorite-menu a:hover{
 	color: #AAA;
 	text-decoration: none;
 }
@@ -172,11 +176,11 @@ ul.favorite-menu-list li.ui-sortable-helper {
 	border:2px solid #CCC;
 }
 .favolite-menu-tools li{
-	padding: 50px 0 0 15px;
+	padding: 50px 0 5px 15px;
 	float: left;
 	margin-right:5px;
 }
-#FavoriteMenu .no-data {
+.bc-favorite-menu .no-data {
 	padding:10px 10px;
 	border:3px dotted #CCC;
 	background: none;
@@ -185,7 +189,7 @@ ul.favorite-menu-list li.ui-sortable-helper {
 
 /* BannerArea
 ----------------------------------------------- */
-#BannerArea li {
+.bc-banner-area li {
 	margin-bottom: 2px;
 	padding-left:1px;
 	padding-right:1px;
@@ -298,13 +302,13 @@ ul.favorite-menu-list li.ui-sortable-helper {
 
 /* Footer
 ----------------------------------------------- */
-#Footer{
+.bc-footer{
 	width:100%;
 	min-width:960px;
     position:absolute;
     bottom:0px;
 }
-#FooterInner{
+.bc-footer-inner {
 	background-image: url(../../img/admin/bg_footer.png);
 	background-repeat: repeat-x;
 	background-color: #333;
@@ -313,18 +317,18 @@ ul.favorite-menu-list li.ui-sortable-helper {
 	margin: 0;
 	min-width:960px;
 }
-#FooterInner a{
+.bc-footer-inner a{
 	color: #BBB;
 	text-decoration: none;
 }
-#FooterInner a:hover{
+.bc-footer-inner a:hover{
 	color: #EEE;
 }
 
 /* FooterLogo
 ----------------------------------------------- */
 
-#FooterLogo{
+.bc-footer-logo{
 	width: 190px;
 	float: left;
 	padding: 65px 0;
@@ -333,25 +337,24 @@ ul.favorite-menu-list li.ui-sortable-helper {
 /* FooterMenu / FooterLink
 ----------------------------------------------- */
 
-#FooterMenu{
+.bc-footer-menu{
 	float: left;
 	background-image: url(../../img/admin/bg_border_2.png);
 	background-repeat: repeat-y;
 	padding:0 30px 0 15px;
 }
-#FooterMenu h2,
-#FooterLink h2{
+.bc-footer-menu h2,
+.bc-footer-link h2 {
 	margin-bottom:15px;
 }
-#FooterMenu li,
-#FooterLink li{
-/*	padding-right:30px;*/
+.bc-footer-menu li,
+.bc-footer-link li{
 	margin:5px 0;
 	background: url(../../img/admin/blt_list_2.png) no-repeat left center;
 	padding-left:15px;
 	line-height:18px;
 }
-#FooterLink{
+.bc-footer-link{
 	float: left;
 	background-image: url(../../img/admin/bg_border_2.png);
 	background-repeat: repeat-y;
@@ -361,25 +364,25 @@ ul.favorite-menu-list li.ui-sortable-helper {
 /* FooterBanner
 ----------------------------------------------- */
 
-#FooterBanner {
+.bc-footer-banner {
 	padding-top:5px;
 	margin-bottom:15px;
 }
-#FooterBanner li {
+.bc-footer-banner li {
 	text-align:right;
 	padding:0px 20px;
 }
-#FooterBanner li img{
+.bc-footer-banner li img{
 	vertical-align:bottom;
 }
-#FooterBanner li.lastChild{
+.bc-footer-banner li.lastChild{
    margin-top:7px;
 }
 
 /* BaserVersion
 ----------------------------------------------- */
 
-#BaserVersion {
+.bc-version {
 	padding-right:20px;
 	text-align:right;
 	font-size:12px;
@@ -390,7 +393,7 @@ ul.favorite-menu-list li.ui-sortable-helper {
 /* Copyright
 ----------------------------------------------- */
 
-#Copyright {
+.bc-copyright {
 	text-align:right;
 	font-size:10px;
 	padding-right:20px;
