SASSのコンパイル結果を「圧縮」に変更

--- a/lib/Baser/webroot/css/admin/layout.css
+++ b/lib/Baser/webroot/css/admin/layout.css
@@ -1,350 +1,2 @@
-@charset "UTF-8";
-/**
- * レイアウト
- *
- * baserCMS :  Based Website Development Project <http://basercms.net>
- * Copyright 2008 - 2014, baserCMS Users Community <http://sites.google.com/site/baserusers/>
- *
- * @copyright		Copyright 2008 - 2014, baserCMS Users Community
- * @link			http://basercms.net baserCMS Project
- * @since			baserCMS v 2.0.0
- * @license			http://basercms.net/license/index.html
- */
-/* ==================================================================== */
-/*    Page
-/* ==================================================================== */
-* html div#Page {
-  height: 100%; }
-
-div#Page {
-  margin: 0px auto;
-  position: relative;
-  min-height: 100%;
-  background-color: #E8E8E8; }
-
-body > #Page {
-  height: auto; }
-
-/* ==================================================================== */
-/*    Header
-/* ==================================================================== */
-/* Header
------------------------------------------------ */
-.bc-header {
-  background-color: #FFF; }
-
-/* Logo
------------------------------------------------ */
-.bc-logo {
-  padding: 20px 40px; }
-
-.bc-logo img {
-  width: 153px;
-  height: 30px; }
-
-/* GlobalMenu
------------------------------------------------ */
-.bc-global-menu {
-  float: right; }
-
-.bc-global-menu ul {
-  padding: 22px 35px 18px; }
-
-.bc-global-menu ul li {
-  padding: 0 5px;
-  list-style: none;
-  float: left;
-  background-image: url(../../img/admin/bg_border_1.png);
-  background-repeat: repeat-y;
-  background-color: #FFF; }
-
-.bc-global-menu ul li.firstChild {
-  background-image: none; }
-
-/* ==================================================================== */
-/*    Wrap
-/* ==================================================================== */
-#Wrap {
-  min-width: 960px;
-  background-color: #E8E8E8;
-  padding: 20px 40px 290px 40px;
-  background-image: url(../../img/admin/bg_main.png);
-  background-repeat: repeat-x; }
-
-/* ==================================================================== */
-/*    SideBar
-/* ==================================================================== */
-.bc-side-bar {
-  width: 208px;
-  float: left;
-  position: absolute;
-  left: -180px; }
-
-.bc-btn-side-bar-opener {
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  z-index: 1;
-  top: 13px;
-  left: 174px;
-  cursor: pointer;
-  line-height: 30px;
-  text-align: center;
-  font-weight: bold;
-  border-left: 1px solid #FFF;
-  color: #fff;
-  font-size: 10px; }
-
-/* FavoriteMenu
------------------------------------------------ */
-.bc-favorite-area {
-  margin-bottom: 14px;
-  float: left;
-  width: 100%;
-  padding: 0 4px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-.bc-favorite-menu {
-  width: 100%; }
-
-.bc-favorite-menu h2 {
-  color: #FFF;
-  background: #333333;
-  padding: 6px 10px 0; }
-
-.bc-favorite-menu h2 img {
-  margin: 0 0 -9px; }
-
-ul.favorite-menu-list a {
-  color: #333;
-  text-decoration: none;
-  display: block;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  padding-right: 5px;
-  padding-left: 22px;
-  background: url(../../img/admin/blt_favorite.png) no-repeat 5px 5px; }
-
-.bc-favorite-menu a:hover {
-  color: #AAA;
-  text-decoration: none; }
-
-ul.favorite-menu-list {
-  padding: 10px 15px; }
-
-ul.favorite-menu-list li {
-  list-style: none;
-  list-style-position: inside;
-  margin: 0;
-  border: 2px solid #FFF;
-  background-color: #FFF;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px; }
-
-ul.favorite-menu-list li.selected {
-  border: 2px solid #690; }
-
-ul.favorite-menu-list li.ui-sortable-helper {
-  border: 2px solid #CCC; }
-
-.favolite-menu-tools li {
-  padding: 50px 0 5px 15px;
-  float: left;
-  margin-right: 5px; }
-
-.bc-favorite-menu .no-data {
-  padding: 10px 10px;
-  border: 3px dotted #CCC;
-  background: none; }
-
-/* BannerArea
------------------------------------------------ */
-.bc-banner-area li {
-  margin-bottom: 2px;
-  padding-left: 1px;
-  padding-right: 1px; }
-
-/* ==================================================================== */
-/*    Contents
-/* ==================================================================== */
-/* contents background
------------------------------------------------ */
-.cbb {
-  margin: 1em 0;
-  border: 1px solid #CCC;
-  background: #fff;
-  float: right;
-  overflow: hidden;
-  width: 100%; }
-
-.cb {
-  float: left;
-  width: 100%; }
-
-/* contents border top
------------------------------------------------ */
-.bt {
-  background: url(../../img/admin/bg_box_2.png) no-repeat 100% 0;
-  height: 10px;
-  margin: 0 0 0 11px; }
-
-.bt div {
-  position: relative;
-  left: -11px;
-  width: 11px;
-  height: 10px;
-  background: url(../../img/admin/bg_box_2.png) no-repeat 0 0;
-  font-size: 0;
-  line-height: 0; }
-
-/* contents border bottom
------------------------------------------------ */
-.bb {
-  background: url(../../img/admin/bg_box_1.png) no-repeat scroll 100% 100% transparent;
-  height: 10px;
-  margin: 0 0 0 12px; }
-
-.bb div {
-  background: url(../../img/admin/bg_box_1.png) no-repeat scroll 0 100% transparent;
-  font-size: 0;
-  height: 10px;
-  left: -12px;
-  line-height: 0;
-  position: relative;
-  width: 12px; }
-
-/* contents border left
------------------------------------------------ */
-.i1 {
-  padding: 0 0 0 4px;
-  background: url(../../img/admin/bg_borders.png) repeat-y 0 0; }
-
-/* contents border right
------------------------------------------------ */
-.i2 {
-  padding: 0 4px 0 0;
-  background: url(../../img/admin/bg_borders.png) repeat-y 100% 0; }
-
-/* contents border inner
------------------------------------------------ */
-.i3 {
-  display: block;
-  margin: 0;
-  background-color: #FFF; }
-
-.i3:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden; }
-
-.i3 {
-  display: inline-block; }
-
-.i3 {
-  display: block; }
-
-/* ==================================================================== */
-/*    ContentsBody
-/* ==================================================================== */
-/* ContentsBody
------------------------------------------------ */
-#ContentsBody {
-  padding: 0 20px 40px; }
-
-/* ==================================================================== */
-/*    Footer
-/* ==================================================================== */
-/* Footer
------------------------------------------------ */
-.bc-footer {
-  width: 100%;
-  min-width: 960px;
-  position: absolute;
-  bottom: 0px; }
-
-.bc-footer-inner {
-  background-image: url(../../img/admin/bg_footer.png);
-  background-repeat: repeat-x;
-  background-color: #333;
-  color: #EEE;
-  padding: 40px 30px 60px;
-  margin: 0;
-  min-width: 960px; }
-
-.bc-footer-inner a {
-  color: #BBB;
-  text-decoration: none; }
-
-.bc-footer-inner a:hover {
-  color: #EEE; }
-
-/* FooterLogo
------------------------------------------------ */
-.bc-footer-logo {
-  width: 190px;
-  float: left;
-  padding: 65px 0; }
-
-/* FooterMenu / FooterLink
------------------------------------------------ */
-.bc-footer-menu {
-  float: left;
-  background-image: url(../../img/admin/bg_border_2.png);
-  background-repeat: repeat-y;
-  padding: 0 30px 0 15px; }
-
-.bc-footer-menu h2,
-.bc-footer-link h2 {
-  margin-bottom: 15px; }
-
-.bc-footer-menu li,
-.bc-footer-link li {
-  margin: 5px 0;
-  background: url(../../img/admin/blt_list_2.png) no-repeat left center;
-  padding-left: 15px;
-  line-height: 18px; }
-
-.bc-footer-link {
-  float: left;
-  background-image: url(../../img/admin/bg_border_2.png);
-  background-repeat: repeat-y;
-  padding-left: 15px; }
-
-/* FooterBanner
------------------------------------------------ */
-.bc-footer-banner {
-  padding-top: 5px;
-  margin-bottom: 15px; }
-
-.bc-footer-banner li {
-  text-align: right;
-  padding: 0px 20px; }
-
-.bc-footer-banner li img {
-  vertical-align: bottom; }
-
-.bc-footer-banner li.lastChild {
-  margin-top: 7px; }
-
-/* BaserVersion
------------------------------------------------ */
-.bc-version {
-  padding-right: 20px;
-  text-align: right;
-  font-size: 12px;
-  font-family: Tahoma, Geneva, sans-serif;
-  margin-bottom: 15px; }
-
-/* Copyright
------------------------------------------------ */
-.bc-copyright {
-  text-align: right;
-  font-size: 10px;
-  padding-right: 20px; }
-
+* html div#Page{height:100%}div#Page{margin:0px auto;position:relative;min-height:100%;background-color:#E8E8E8}body>#Page{height:auto}.bc-header{background-color:#FFF}.bc-logo{padding:20px 40px}.bc-logo img{width:153px;height:30px}.bc-global-menu{float:right}.bc-global-menu ul{padding:22px 35px 18px}.bc-global-menu ul li{padding:0 5px;list-style:none;float:left;background-image:url(../../img/admin/bg_border_1.png);background-repeat:repeat-y;background-color:#FFF}.bc-global-menu ul li.firstChild{background-image:none}#Wrap{min-width:960px;background-color:#E8E8E8;padding:20px 40px 290px 40px;background-image:url(../../img/admin/bg_main.png);background-repeat:repeat-x}.bc-side-bar{width:208px;float:left;position:absolute;left:-180px}.bc-btn-side-bar-opener{width:30px;height:30px;position:absolute;z-index:1;top:13px;left:174px;cursor:pointer;line-height:30px;text-align:center;font-weight:bold;border-left:1px solid #FFF;color:#fff;font-size:10px}.bc-favorite-area{margin-bottom:14px;float:left;width:100%;padding:0 4px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.bc-favorite-menu{width:100%}.bc-favorite-menu h2{color:#FFF;background:#333333;padding:6px 10px 0}.bc-favorite-menu h2 img{margin:0 0 -9px}ul.favorite-menu-list a{color:#333;text-decoration:none;display:block;padding-top:3px;padding-bottom:3px;padding-right:5px;padding-left:22px;background:url(../../img/admin/blt_favorite.png) no-repeat 5px 5px}.bc-favorite-menu a:hover{color:#AAA;text-decoration:none}ul.favorite-menu-list{padding:10px 15px}ul.favorite-menu-list li{list-style:none;list-style-position:inside;margin:0;border:2px solid #FFF;background-color:#FFF;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px}ul.favorite-menu-list li.selected{border:2px solid #690}ul.favorite-menu-list li.ui-sortable-helper{border:2px solid #CCC}.favolite-menu-tools li{padding:50px 0 5px 15px;float:left;margin-right:5px}.bc-favorite-menu .no-data{padding:10px 10px;border:3px dotted #CCC;background:none}.bc-banner-area li{margin-bottom:2px;padding-left:1px;padding-right:1px}.cbb{margin:1em 0;border:1px solid #CCC;background:#fff;float:right;overflow:hidden;width:100%}.cb{float:left;width:100%}.bt{background:url(../../img/admin/bg_box_2.png) no-repeat 100% 0;height:10px;margin:0 0 0 11px}.bt div{position:relative;left:-11px;width:11px;height:10px;background:url(../../img/admin/bg_box_2.png) no-repeat 0 0;font-size:0;line-height:0}.bb{background:url(../../img/admin/bg_box_1.png) no-repeat scroll 100% 100% transparent;height:10px;margin:0 0 0 12px}.bb div{background:url(../../img/admin/bg_box_1.png) no-repeat scroll 0 100% transparent;font-size:0;height:10px;left:-12px;line-height:0;position:relative;width:12px}.i1{padding:0 0 0 4px;background:url(../../img/admin/bg_borders.png) repeat-y 0 0}.i2{padding:0 4px 0 0;background:url(../../img/admin/bg_borders.png) repeat-y 100% 0}.i3{display:block;margin:0;background-color:#FFF}.i3:after{content:".";display:block;height:0;clear:both;visibility:hidden}.i3{display:inline-block}.i3{display:block}#ContentsBody{padding:0 20px 40px}.bc-footer{width:100%;min-width:960px;position:absolute;bottom:0px}.bc-footer-inner{background-image:url(../../img/admin/bg_footer.png);background-repeat:repeat-x;background-color:#333;color:#EEE;padding:40px 30px 60px;margin:0;min-width:960px}.bc-footer-inner a{color:#BBB;text-decoration:none}.bc-footer-inner a:hover{color:#EEE}.bc-footer-logo{width:190px;float:left;padding:65px 0}.bc-footer-menu{float:left;background-image:url(../../img/admin/bg_border_2.png);background-repeat:repeat-y;padding:0 30px 0 15px}.bc-footer-menu h2,.bc-footer-link h2{margin-bottom:15px}.bc-footer-menu li,.bc-footer-link li{margin:5px 0;background:url(../../img/admin/blt_list_2.png) no-repeat left center;padding-left:15px;line-height:18px}.bc-footer-link{float:left;background-image:url(../../img/admin/bg_border_2.png);background-repeat:repeat-y;padding-left:15px}.bc-footer-banner{padding-top:5px;margin-bottom:15px}.bc-footer-banner li{text-align:right;padding:0px 20px}.bc-footer-banner li img{vertical-align:bottom}.bc-footer-banner li.lastChild{margin-top:7px}.bc-version{padding-right:20px;text-align:right;font-size:12px;font-family:Tahoma, Geneva, sans-serif;margin-bottom:15px}.bc-copyright{text-align:right;font-size:10px;padding-right:20px}
 /*# sourceMappingURL=layout.css.map */
