--- a/lib/Baser/webroot/css/admin/import.css
+++ b/lib/Baser/webroot/css/admin/import.css
@@ -1,18 +1,2 @@
-@charset "UTF-8";
-/**
- * CSSインポート
- *
- * baserCMS :  Based Website Development Project <http://basercms.net>
- * Copyright 2008 - 2014, baserCMS Users Community <http://sites.google.com/site/baserusers/>
- *
- * @copyright		Copyright 2008 - 2014, baserCMS Users Community
- * @link			http://basercms.net baserCMS Project
- * @since			baserCMS v 2.0.0
- * @license			http://basercms.net/license/index.html
- */
-@import url(default.css);
-@import url(base.css);
-@import url(layout.css);
-@import url(contents.css);
-
+@import url(default.css);@import url(base.css);@import url(layout.css);@import url(contents.css);
 /*# sourceMappingURL=import.css.map */
